--- a/dev/views/blocks/menu.pug
+++ b/dev/views/blocks/menu.pug
@@ -1,3 +1,7 @@
-ul.menu
-   li: a(href="www.google.com") Item 1
-   li: a(href="www.google.com") Item 
+nav
+   ul
+      li Emprendiendo
+      li 11 Factores.
+      li Leyendas.
+      li Ejemplos.
+      li Consejos.
