--- a/dev/views/templates/template.pug
+++ b/dev/views/templates/template.pug
@@ -4,7 +4,7 @@ html(lang="en")
       //-en la etiqueta head todos nuestros metadatos.
       meta(charset="UTF-8")
       meta(name="viewport", content="width=device-width, user-scalable=no, initial-scale=1.0, minimun-scale=1.0")
-      link(rel="stylesheet", href="prueb.css")
+      link(rel="stylesheet", href="css/prueb.css")
       title Tiny Tweaks
    body
       block body
