--- a/dev/views/blocks/anatomia.pug
+++ b/dev/views/blocks/anatomia.pug
@@ -1,82 +1,27 @@
 //-Este módulo equivale al bloque de código en la sección de Anatomía del emprendedor.
+mixin par
+   p.
+      Lorem ipsum dolor sit amet,
+      consectetur adipisicing elit,
+      sed do eiusmod tempor incididunt
+      ut labore et dolore magna aliqua.
+      Ut enim ad minim veniam, quis
+      nostrud exercitation ullamco laboris
+      nisi ut aliquip ex ea commodo consequat.
+      Duis aute irure dolor in reprehenderit
+      in voluptate velit esse cillum dolore 
+      eu fugiat nulla pariatur. Excepteur
+      sint occaecat cupidatat non proident,
+      sunt in culpa qui officia deserunt
+      mollit anim id est laborum.
+
 div
    h2.subtitulo Anatomía del emprendedor.
    ul
-      li Emancipacion
-      div(class="texto uno")
-      //-con el punto enseguida del nombre de la etiqueta lo que se le dice es que es contenido.
-      p.
-         Lorem ipsum dolor sit amet,
-         consectetur adipisicing elit, sed
-         do eiusmod tempor incididunt ut
-         labore et dolore magna aliqua.
-         Ut enim ad minim veniam, quis nostrud
-         exercitation ullamco laboris nisi ut
-         aliquip ex ea commodo consequat.
-         Duis aute irure dolor in reprehenderit
-         in voluptate velit esse cillum dolore
-         eu fugiat nulla pariatur. Excepteur sint occaecat
+      each val, index in ['Emancipacion', 'Moderación en la ambición del dinero', 'Pasión', 'Resultados', 'Espiritualidad', 'Novicio (actitud de aprendiz)', 'Disfrute del camino', 'Éxistos compartidos', 'Determinación', 'Optimismo y sueños', 'Responsabilidad incondicional (Protagonismo.)']
+         li= val
+         - var i = index+1;
+      div(class="texto " + i)
+         +par
 
-      li Moderación en la ambición del dinero.
-      div(class="texto dos")
-      //-con el punto enseguida del nombre de la etiqueta lo que se le dice es que es contenido.
-      p.
-         Lorem ipsum dolor sit amet,
-         consectetur adipisicing elit, sed
-         do eiusmod tempor incididunt ut
-         labore et dolore magna aliqua.
-         Ut enim ad minim veniam, quis nostrud
-         exercitation ullamco laboris nisi ut
-         aliquip ex ea commodo consequat.
-         Duis aute irure dolor in reprehenderit
-         in voluptate velit esse cillum dolore
-         eu fugiat nulla pariatur. Excepteur sint occaecat
-
-      li Pasión
-      div(class="texto tres")
-      //-con el punto enseguida del nombre de la etiqueta lo que se le dice es que es contenido.
-      p.
-         Lorem ipsum dolor sit amet,
-         consectetur adipisicing elit, sed
-         do eiusmod tempor incididunt ut
-         labore et dolore magna aliqua.
-         Ut enim ad minim veniam, quis nostrud
-         exercitation ullamco laboris nisi ut
-         aliquip ex ea commodo consequat.
-         Duis aute irure dolor in reprehenderit
-         in voluptate velit esse cillum dolore
-         eu fugiat nulla pariatur. Excepteur sint occaecat
-
-      li Resultados
-      div(class="texto cuatro")
-      //-con el punto enseguida del nombre de la etiqueta lo que se le dice es que es contenido.
-      p.
-         Lorem ipsum dolor sit amet,
-         consectetur adipisicing elit, sed
-         do eiusmod tempor incididunt ut
-         labore et dolore magna aliqua.
-         Ut enim ad minim veniam, quis nostrud
-         exercitation ullamco laboris nisi ut
-         aliquip ex ea commodo consequat.
-         Duis aute irure dolor in reprehenderit
-         in voluptate velit esse cillum dolore
-         eu fugiat nulla pariatur. Excepteur sint occaecat
-
-      li Espiritualidad
-      div(class="texto cinco")
-      //-con el punto enseguida del nombre de la etiqueta lo que se le dice es que es contenido.
-      p.
-         Lorem ipsum dolor sit amet,
-         consectetur adipisicing elit, sed
-         do eiusmod tempor incididunt ut
-         labore et dolore magna aliqua.
-         Ut enim ad minim veniam, quis nostrud
-         exercitation ullamco laboris nisi ut
-         aliquip ex ea commodo consequat.
-         Duis aute irure dolor in reprehenderit
-         in voluptate velit esse cillum dolore
-         eu fugiat nulla pariatur. Excepteur sint occaecat
-
-      li Hay más pero quedaran pendientes para la refactorización del código.
-      //Refactorizar a la brevedad.
 .elemento
