--- a/dev/views/templates/template.pug
+++ b/dev/views/templates/template.pug
@@ -7,6 +7,8 @@ html(lang="en")
       link(rel="stylesheet", href="css/prueb.css")
       title Tiny Tweaks
    body
+      //A los bloques se les pasa elcontenido del archivo que extiende por lo general
+      //que es donde por lo general va el contenido.
       block body
       footer
          block footer
